# crawdad_tutorials

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  allene.txt  constants.hpp  diag.cpp  project1_benzene.cpp  project2_h2o.cpp  project2_h2o.py  project3.cpp  project3.py  project3_h2o_sto3g.py  utils.cpp  utils.hpp  utils.py
crawdad_tutorials/: Makefile  Makefile.old  molecule.cpp
crawdad_tutorials/project1/: Makefile  constants.hpp  molecule.cpp  molecule.hpp  project1.cpp  project1_acetaldehyde.cpp  project1_allene.cpp
project1/: diag.cc  project1_allene.cpp  project1_benzene.cpp  water.cpp
project2/: __init__.py  project2_h2o.cpp  project2_h2o.py
project3/: __init__.py  p3_3.py  project3.cpp  project3.py  project3_arma.cpp  project3_arma_nocomments.cpp
project4/: project4_arma.cpp
project8/: project8.jl  project8_arma.cpp
